<?xml version="1.0"?>
<package>
  <name>vigir_atlas_gazebo_launch</name>
  <version>0.0.0</version>
  <description>The vigir_atlas_gazebo_launch package</description>

  <maintainer email="kohlbrecher@todo.todo">kohlbrecher</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>